# claude-starter

./: .gitignore  README.md  team-settings.json
.claude-plugin/: marketplace.json
.superpowers/: .gitignore
plugins/wp-labs-planner/skills/planner-setup/scripts/: .gitignore  pyproject.toml
plugins/wp-labs-planner/skills/planner-setup/scripts/planner/: __init__.py  config.py  daily.py  errors.py  gitcommit.py  import_onenote.py  obsidian_mcp.py  onenote_notes.py  onenote_pdf.py  people.py  render_daily.py  render_tasks.py  render_weekly.py  synthesis.py  weekly.py
plugins/wp-labs-planner/skills/planner-setup/scripts/planner/collectors/: gdoc.py  gmail.py  gsheet.py  onenote.py  vault.py
plugins/wp-labs-planner/skills/planner-setup/scripts/templates/: Daily.md  Weekly.md  config.example.yaml
plugins/wp-labs-planner/skills/planner-setup/scripts/templates/launchd/: com.wp-labs.planner.daily.plist  com.wp-labs.planner.weekly.plist
plugins/wp-labs-planner/skills/planner-setup/scripts/tests/: conftest.py  test_collectors_gdoc.py  test_collectors_gmail.py  test_collectors_gsheet.py  test_collectors_onenote.py  test_collectors_vault.py  test_config.py  test_entrypoints.py  test_errors.py  test_gitcommit.py  test_import_onenote.py  test_obsidian_mcp.py  test_onenote_notes.py  test_onenote_pdf.py  test_people.py  test_render_daily.py  test_render_tasks.py  test_render_weekly.py  test_smoke.py  test_status_check.py  test_synthesis.py  test_weekly.py
plugins/wp-labs-planner/skills/planner-setup/scripts/wp_labs_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+96 files in other folders)
